--- a/index.html
+++ b/index.html
@@ -51,7 +51,21 @@
       </div>
     </div>
   </div>
-  <!-- <div class="container">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12" style="color: rgb(196, 28, 22)">
+        <p>variavel x = 0; --- declaracao de variavel(tipo any)</p>
+        <p>x = leia; --- ler valor</p>
+        <p>imprima(""); --- imprime o valor inserido</p>
+        <p>se(condicao) {} senao{} --- condional </p>
+        <p>enquanto(condicao){} --- estrutura de repeticao</p>
+        <p>para(variavel x; condicao; incremento) {}</p>
+        <p>:)</p>
+      </div>
+    </div>
+  </div>
+    <!-- <div class="container">
     <div class="row mt-1" id="console">
       <div class="col-12" id="console-erro">
 
