--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
     </div>
     <div class="row mt-1">
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <textarea class="textarea-codigo" id="codigo" style="resize: none" name="codigo"></textarea><br>
       </div>
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <div class="row">
           <div class="col-12" id="campo-codigoJs">
             <div id="codigoJs"></div>
