colorir palavras reservadas(ainda em progresso), adicionada mais palavras reservadas e iniciacao do 'editor de codigo'

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       </div>
     </div>
     <div class="row mt-1">
-      <div class="col-12 col-md-6">
-        <textarea class="textarea-codigo" id="codigo" style="resize: none" name="codigo"></textarea><br>
+      <div class="col-12 col-md-6"  style="height: 500px;">
+          <div id="content" contenteditable="true" style="height: 500px;"></div>
+        <!-- <textarea class="textarea-codigo" id="codigo" style="resize: none" name="codigo"></textarea><br> -->
       </div>
       <div class="col-12 col-md-6">
         <div class="row">
@@ -51,6 +52,7 @@
       </div>
     </div>
   </div>
+  
 
   <div class="container">
     <div class="row">
@@ -61,6 +63,7 @@
         <p>se(condicao) {} senao{} --- condional </p>
         <p>enquanto(condicao){} --- estrutura de repeticao</p>
         <p>para(variavel x; condicao; incremento) {}</p>
+        <p>e/ou --- operador logico</p>
         <p>:)</p>
       </div>
     </div>
@@ -72,7 +75,6 @@
       </div>
     </div>
   </div> -->
-  <script src="Traducao.js"></script>
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
