Mudanças no editor de texto

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
     </div>
     <div class="row mt-1">
-      <div class="col-12 col-md-6"  style="height: 500px;">
-          <div id="content" contenteditable="true" style="height: 500px;"></div>
+      <div class="col-12 col-md-6" style="height: 500px;">
+        <div id="content" spellcheck="false" contenteditable="true" style="height: 500px;"></div>
         <!-- <textarea class="textarea-codigo" id="codigo" style="resize: none" name="codigo"></textarea><br> -->
       </div>
       <div class="col-12 col-md-6">
@@ -46,13 +46,13 @@
             <div id="codigoJs"></div>
           </div>
           <div class="col-12" id="console-erro">
-            
+
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+
 
   <div class="container">
     <div class="row">
@@ -68,7 +68,7 @@
       </div>
     </div>
   </div>
-    <!-- <div class="container">
+  <!-- <div class="container">
     <div class="row mt-1" id="console">
       <div class="col-12" id="console-erro">
 
