--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     </div>
     <div class="row mt-1 no-gutters">
       <div class="col-12 col-md-6" style="height: 500px;">
-        <div id="content" onkeydown="onKeyDown(event)" spellcheck="false" contenteditable="true" style="height: 500px;"></div>
+        <div id="content" onkeydown="onKeyDown(event)" spellcheck="false" contenteditable="true" style="height: 500px;">
+        </div>
       </div>
       <div class="col-12 col-md-6">
         <div class="col-12" id="campo-codigoJs">
-            <div id="codigoJs"></div>
+          <div id="codigoJs"></div>
         </div>
         <div class="col-12" id="console-erro">
 
@@ -51,21 +52,103 @@
   </div>
 
 
-  <div class="container">
+  <div class="container mt-5">
     <div class="row">
-      <div class="col-6 col-sm-4" style="color: rgb(196, 28, 22)">
-        <p>variavel x = 0; --- declaracao de variavel(tipo any)</p>
-        <p>x = leia; --- ler valor</p>
+      <div class="col-12 text-center">
+        <h3>Biblioteca</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6 col-md-4">
+        <div id="tipo-dados">
+          <div class="col-12 palavras-reservadas-titulo">
+            <span><b>Tipos de variaveis</b></span>
+          </div>
+          <div class="col-12 palavras-reservadas-content">
+            <span><b>variavel</b> x = 0;</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <div id="interacao-usuario">
+          <div class="col-12 palavras-reservadas-titulo">
+            <span><b>Interação com Usuário</b></span>
+          </div>
+          <div class="col-12 palavras-reservadas-content">
+            <span><b>imprima(</b><i> valor </i><b>);</b></span><br>
+            <span><i>variavel x =</i> <b>leia;</b></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <div id="condicional">
+          <div class="col-12 palavras-reservadas-titulo">
+            <span><b>Condicional</b></span>
+          </div>
+          <div class="col-12 palavras-reservadas-content">
+            <span><b>se(</b><i> condicao </i><b>) {</b> <i>código</i> <b>}</b></span><br>
+            <span><b>senao {</b> <i>código</i> <b>}</b></span><br>
+            <span><b>senaose(</b> <i>condição</i> <b>) {</b> <i>código</i> <b>}</b></span><br>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <div id="operadores-aritmeticos">
+          <div class="col-12 palavras-reservadas-titulo">
+            <span><b>Operadores Aritméticos</b></span>
+          </div>
+          <div class="col-12 palavras-reservadas-content">
+            <span>Atribuição: <b>=</b></span><br>
+            <span>Subtração: <b>-</b></span><br>
+            <span>Adição: <b>+</b></span><br>
+            <span>Multiplicação: <b>*</b></span><br>
+            <span>Divisão: <b>/</b></span><br>
+            <span>Resto: <b>%</b></span><br>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <div id="operadores-logicos">
+          <div class="col-12 palavras-reservadas-titulo">
+            <span><b>Operadores Lógicos</b></span>
+          </div>
+          <div class="col-12 palavras-reservadas-content">
+            <span>Inversor Lógico: <b>!</b>variavelQualquer</span><br>
+            <span>Igualdade: <b>==</b></span><br>
+            <span>Diferente: <b>!=</b></span><br>
+            <span>Maior que: <b>&gt;</b></span><br>
+            <span>Menor que: <b>&lt;</b></span><br>
+            <span>Maior ou Igual que: <b>&gt;=</b></span><br>
+            <span>Menor ou Igual que: <b>&lt;=</b></span><br>
+            <span>Ocorre ambas condições: <b>E</b></span><br>
+            <span>Ocorre pelomenos 1 condição: <b>OU</b></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-md-4">
+        <div id="estruturas-repeticao">
+          <div class="col-12 palavras-reservadas-titulo">
+            <span><b>Estruturas de repetição</b></span>
+          </div>
+          <div class="col-12 palavras-reservadas-content">
+            <span><b>enquanto(</b> <i>condição</i> <b>){</b> <i>código</i><b> }</b></span><br>
+            <span><b>para(</b>variavel x = 0; <i>condição</i>; <i>variavel de incremento</i><b>){</b> <i> código </i>
+              <b>}</b></span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- <p>x = leia; --- ler valor</p>
         <p>imprima(""); --- imprime o valor inserido</p>
         <p>se(condicao) {} senao{} --- condional </p>
         <p>enquanto(condicao){} --- estrutura de repeticao</p>
         <p>para(variavel x; condicao; incremento) {}</p>
         <p>e/ou --- operador logico</p>
-        <p>:)</p>
-      </div>
-    </div>
-  </div>
-  
+        <p>:)</p> -->
+
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -77,4 +160,5 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
 </body>
+
 </html>
