numero de linha e scroll sincronizado

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
     <div class="row no-gutters">
       <div class="col-12 col-md-6" style="height: 500px; display: block;">
-        <div id="content-lateral"></div>
-        <div id="content" onkeydown="onKeyDown(event); " onkeyup="selecionarLinha(event);" spellcheck="false" contenteditable="true" >
+        <div id="content-lateral" onscroll="onScrollContentLateral()"></div>
+        <div id="content" onkeydown="onKeyDown(event);"onscroll="onScrollContent()" onkeyup="selecionarLinha(event);" spellcheck="false" contenteditable="true" >
         </div>
       </div>
       <div class="col-12 col-md-6">
