remoção do container fluid

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
+  <div class="container">
     <div class="row mt-3 no-gutters">
 
       <div class="col-sm-6 col-12">
@@ -81,7 +81,7 @@
           </div>
           <div class="col-12 palavras-reservadas-content">
             <span><b>imprima(</b><i> valor </i><b>);</b></span><br>
-            <span><i>variavel x =</i> <b>leia;</b></span>
+            <span><i>variavel x =</i> <b>leia</b>(Vazio/"<i>Mensagem</i>");</span>
           </div>
         </div>
       </div>
